--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Meu portfólio</title>
 </head>
 <body>
-    <img src="img/avatar-perfil.png" alt="avatar da Fernanda" srcset="">
-    <p>Eu sou Fernanda_</p>
-    <h1>Eu ensino Programação</h1>
-    <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos que já desenvolvi! </p>
+    <img src="img/Imagem-do-WhatsApp-de-2024-07-01-as-21.20.34_46bb9319 (1).jpg" alt="avatar de Igor e Juliano
+    <p>Eu sou igão forasteiro e Juliano matador de onça
+    <h1>Eu aprendo programação</h1>
+    <p> </p>
     <p>Minhas habilidades</p>
     <div>
             <p>HTML</p>
