--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Meu portfólio</title>
 </head>
 <body>
-    <img src="img/Imagem-do-WhatsApp-de-2024-07-01-as-21.20.34_46bb9319 (1).jpg" alt="avatar de Igor e Juliano
-    <p>Eu sou igão forasteiro e Juliano matador de onça
+    <img src="img/Imagem-do-WhatsApp-de-2024-07-01-as-21.20.34_46bb9319 (1).jpg" alt="avatar de Igor e Juliano"srcet="">
+    <p>Eu sou igão forasteiro e Juliano matador de onça</p>
     <h1>Eu aprendo programação</h1>
-    <p> </p>
+    <p>Sou agricultor
     <p>Minhas habilidades</p>
     <div>
             <p>HTML</p>
