--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"  crossorigin="anonymous"  />
     <link rel="stylesheet" href="style.css">
     <title>Meu portfólio</title>
 </head>
 <body>
+    <header class="container">
     <img src="img/Imagem-do-WhatsApp-de-2024-07-01-as-21.20.34_46bb9319 (1).jpg" alt="avatar de Igor e Juliano"srcet="">
     <p>Eu sou igão forasteiro e Juliano matador de onça</p>
     <h1>Eu aprendo programação</h1>
@@ -18,5 +20,11 @@
             <p>JavaScript</p>
             <p>Scratch</p>
     </div>
+</header>
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
 </body>
 </html>
