--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Meu portfólio</title>
 </head>
 <body>
+<div id="acessibilidaade" class="menu-acessibilidade">
+    <button id="aumentar-font" class="btn btn-primary fw-bold">A+</button>
+    <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
+</div>
     <header class="container">
     <img src="img/Imagem-do-WhatsApp-de-2024-07-01-as-21.20.34_46bb9319 (1).jpg" alt="avatar de Igor e Juliano"srcet="">
     <p>Eu sou igão forasteiro e Juliano matador de onça</p>
@@ -21,10 +25,9 @@
             <p>Scratch</p>
     </div>
 </header>
-<script
+<script src="script.js"<>/script>
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
 </body>
-</html>
