--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/Imagem-do-WhatsApp-de-2024-07-01-as-21.20.34_46bb9319 (1).jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Fernanda_</p>
         <h1>Eu ensino Programação</h1>
