--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/Imagem-do-WhatsApp-de-2024-07-01-as-21.20.34_46bb9319 (1).jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/Imagem-do-WhatsApp-de-2024-07-01-as-21.20.34_46bb9319 (1).jpg" alt="avatar de Igor e Juliano" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p class="lead">Eu sou igão forasteiro e juliano esgualepado_</p>
+        <h1>Eu aprendo Programação</h1>
+        <p>Somos alunos e estamos aprendendo programação!</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
