--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/Captura de tela_2025-03-13_07-49-22.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
                             Artificial</h5>
@@ -64,7 +64,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/Captura de tela_2025-03-13_07-55-11.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
                         </h5>
