--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
                 <div class="card">
                     <img src="img/Captura de tela_2025-03-13_07-48-17.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Google Fonts.
+                        <h5 class="card-title">Projeto do scratch da nave espacial</h5>
+                        <p class="card-text">Este projeto é um jogo que você tem que batalhar contra uma nave espacial.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
